<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.matsim</groupId>
	<artifactId>alonso-mora</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>
	<name>Implementation of the fleet dispatcher by Alonso-Mora et al. for
		MATSim</name>
	<description>This package implements the pooled fleet dispatching algorithm
		introduced by

		Alonso-Mora, J., Samaranayake, S., Wallar, A., Frazzoli, E., Rus, D.,
		2017. On-demand high-capacity ride-sharing via dynamic trip-vehicle
		assignment. Proc Natl Acad Sci USA 114, 462–467.

		to the MATSim framework.</description>

	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<matsim.version>2026.0-2026w02</matsim.version>
		<junit.version>5.13.4</junit.version>
	</properties>

	<repositories>
		<repository>
			<id>osgeo</id>
			<name>Geotools repository</name>
			<url>https://repo.osgeo.org/repository/release/</url>
		</repository>
		<repository>
			<id>matsim</id>
			<url>https://repo.matsim.org/repository/matsim</url>
		</repository>
	</repositories>

	<modules>
		<module>core</module>
		<module>glpk</module>
		<module>gurobi</module>
		<module>cplex</module>
	</modules>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>5.19.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<version>${matsim.version}</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim-examples</artifactId>
			<version>${matsim.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>drt-extensions</artifactId>
			<version>${matsim.version}</version>
		</dependency>
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>drt</artifactId>
			<version>${matsim.version}</version>
		</dependency>
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>dvrp</artifactId>
			<version>${matsim.version}</version>
		</dependency>
		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<version>${matsim.version}</version>
		</dependency>
	</dependencies>
</project>